adding season type filter to pregame WP
