# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "This is an API for accessing all sorts of college football data.  It currently has a wide array of data ranging from play by play to player statistics to game scores and more.",
-    "version": "1.21.0",
+    "version": "1.21.1",
     "title": "College Football Data API",
     "contact": {
       "email": "admin@collegefootballdata.com"
@@ -1762,6 +1762,13 @@
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "seasonType",
+            "description": "regular or postseason",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "responses": {
@@ -3320,6 +3327,9 @@
       "properties": {
         "season": {
           "type": "integer"
+        },
+        "seasonType": {
+          "type": "string"
         },
         "week": {
           "type": "integer"
